[package]
name = "ddns-update"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
structopt = { version = "0.3" }
eyre = "0.6"

serde = { version = "1.0", features = [ "derive" ] }
